# Adversarial_Observation

./: .buildinfo  .gitignore  Adversarial_Observation.html  LICENSE.txt  README.md  Swarm_Observer.html  example.py  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.html  setup.py  taint_MNIST.py
.devcontainer/: devcontainer.json
.github/workflows/: build_docs.yml  python-publish.yml  run_tests.yml
Adversarial_Observation/: Attacks.py  BirdParticle.py  Swarm.py  __init__.py  attacks.py  explain.py  utils.py  visualize.py
Swarm_Observer/: BirdParticle.py  Swarm.py  __init__.py
_modules/: index.html
_modules/Adversarial_Observation/: Attacks.html  utils.html  visualize.html
_modules/Swarm_Observer/: BirdParticle.html  Swarm.html
_sources/: Swarm_Observer.rst.txt  index.rst.txt  modules.rst.txt
docs/: Adversarial_Observation.rst  Swarm_Observer.rst  conf.py  index.rst  modules.rst  run.sh
example/: 1_build_train_MNIST.py  2_attack_MNIST.py  2_generate_attacks.py  3_create_APSO_MNIST.py  3_swarm_attack.py  4_create_Shap_MNIST.py  README.md  util.py
example/CIFAR10/: 1_build_train.py  2_attack.py  3_create_APSO.py  4_create_Shap.py  analysis.py  util.py
example/MNIST/: 1_build_train.py  2_adversarial_attack.py  2_attack.py  3_create_APSO.py  4_analyze_APSO.py  4_create_Shap.py  5_create_SHAP.py  README.md  analysis.py  log.csv  nohup.out
example/MNIST/docs/: 2_adversarial_attack.md  4_analyze_APSO.md  5_create_SHAP.md
example/artifacts/: mnist_cnn.pt
example/artifacts/ran_attack_vis/: swarm.csv
manuscripts/PEARC24/MNIST/: 1_build_train.py  3p1_APSO_W_Anchor.py
manuscripts/PEARC24/MNIST/docs/: 1_build_train.md  3_create_APSO.md
manuscripts/Posion25/: .gitignore  00_train_models.sh  0_train_models.sh  1_dataset.sh  1_dataset_label_tool.py  1_trainModel.py  2_attackModel.py  2_attackModel.sh  3_stats.py  analysis.py  main.py  models.py  runall.sh  setup.sh  taint.py  train.py
manuscripts/Posion25/results/: best_particle-clean_stats.tsv  best_particle_stats.tsv
manuscripts/Posion25/temp/: 01_generate_attack_labels.sh  3_generate_attack_label.py
tests/: test_Gradient.py  test_Saliency.py  test_Swarm.py  test_adversarial_attacks.py  test_attacks.py  test_bird_particle.py  test_model_data.py  test_pso_optimization.py  test_swarm.py
