[metadata]
name = Adversarial_Observation
version = 0.0.1
author = Jamil Gafur, Study Duck, Suely Oliveira, Olivia Lang, Justin Cha, William Lai
author_email = Jamil-gafur@uiowa.edu
description = This package is used to help with the interpretation and adversarial generation of pytorch models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EpiGenomicsCode/Adversarial_Observationhttps://github.com/EpiGenomicsCode/Adversarial_Observation
project_urls =
    Bug Tracker = https://github.com/EpiGenomicsCode/Adversarial_Observation/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    torch
    numpy
    tqdm
    pandas
    matplotlib
    sklearn
    os
    torchvision
python_requires = >=3.6

[options.packages.find]
exclude =
    tests*

[upload]
name = testpypi
repository = https://test.pypi.org/Adversarial_Observation/
