[metadata]
name = Adversarial_Observation
version = 0.0.2
author = Jamil Gafur, Study Duck, Suely Oliveira, Olivia Lang, Justin Cha, William Lai
author_email = Jamil-gafur@uiowa.edu
description = This package is used to help with the interpretation and adversarial generation of PyTorch models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EpiGenomicsCode/Adversarial_Observation
project_urls =
    Bug Tracker = https://github.com/EpiGenomicsCode/Adversarial_Observation/issues
    Source Code = https://github.com/EpiGenomicsCode/Adversarial_Observation/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    torch>=1.0
    numpy>=1.19
    tqdm>=4.0
    pandas>=1.0
    matplotlib>=3.0
    scikit-learn>=0.22
    python_requires = >=3.6

[options.packages.find]
exclude =
tests*

[options.package_data]

= *.txt, *.md
[upload]
name = testpypi
repository = https://test.pypi.org/Adversarial_Observation/